--- a/Datonate/templates/index.html
+++ b/Datonate/templates/index.html
@@ -11,15 +11,15 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Datonate</title>
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/flexslider.css">
-  <link rel="stylesheet" href="css/jquery.fancybox.css">
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="css/responsive.css">
-  <link rel="stylesheet" href="css/font-icon.css">
-  <link rel="stylesheet" href="css/animate.min.css">
+  <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/static/css/flexslider.css">
+  <link rel="stylesheet" href="/static/css/jquery.fancybox.css">
+  <link rel="stylesheet" href="/static/css/main.css">
+  <link rel="stylesheet" href="/static/css/responsive.css">
+  <link rel="stylesheet" href="/static/css/font-icon.css">
+  <link rel="stylesheet" href="/static/css/animate.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/bootstrap-social.css">
+  <link rel="stylesheet" href="/static/css/bootstrap-social.css">
 </head>
 </head>
 
@@ -60,12 +60,13 @@
           </div>
           <div class="modal-body">
             <div class="login-div">  
-              <form role="form" id="form-login" action="#">
+
+              <form role="form" id="form-login" action="/login">
                 <div class="form-group">
-                  <input type="email" class="form-control" id="email-login" placeholder="Enter email">
+                  <input type="email" class="form-control" id="email-login" placeholder="Enter email" name="email">
                 </div>
                 <div class="form-group">
-                  <input type="password" class="form-control" id="pwd-login" placeholder="Enter password">
+                  <input type="password" class="form-control" id="pwd-login" placeholder="Enter password" name="password">
                 </div>
                 <div class="modal-btn">
                   <button type="submit" id="submit-login" class="btn btn-primary">Log In</button>
@@ -83,9 +84,10 @@
                <a href="#" class="forgot-password">Forgot Password?</a>
                <br>
              </form>
+
            </div>
            <div class="reset-div">
-            <form id="reset-form" action="">
+            <form role="form" onsubmit="return login('form');">
               <div class="form-group">
                 <label for="email">Email:</label>
                 <input type="email" class="form-control" id="email" placeholder="Enter email">
@@ -95,7 +97,7 @@
             </form>
           </div>
           <div class="registration-div">
-            <form id="register-form" action="">
+            <form id="register" onsubmit="return register_valid('register');">
               <div class="form-group row">
 
               </div>
@@ -179,20 +181,22 @@
 <!-- Footer section --> 
 <!-- JS FILES --> 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> 
-<script src="js/bootstrap.min.js"></script> 
-<script src="js/jquery.flexslider-min.js"></script> 
-<script src="js/jquery.fancybox.pack.js"></script> 
-<script src="js/retina.min.js"></script> 
-<script src="js/modernizr.js"></script> 
-<script src="js/main.js"></script> 
-<script type="text/javascript" src="js/jquery.contact.js"></script>
+<script src="/static/js/bootstrap.min.js"></script> 
+<script src="/static/js/jquery.flexslider-min.js"></script> 
+<script src="/static/js/jquery.fancybox.pack.js"></script> 
+<script src="/static/js/retina.min.js"></script> 
+<script src="/static/js/modernizr.js"></script> 
+<script src="/static/js/main.js"></script> 
+<script type="text/javascript" src="/static/js/jquery.contact.js"></script>
 
 <script>
+
+/*
 $( document ).ready(function() {
   $("#form-login").submit(function(){
   var emailID = $("#email-login").val()
   var pwd = $("#pwd-login").val()
-  var baseUrl = "http://467a1d51.ngrok.io"
+  var baseUrl = "127.0.0.1"
   var endpoint = "/api/login"
 
   var finalURL = baseUrl+endpoint
@@ -203,59 +207,9 @@ $( document ).ready(function() {
   });
 });
 
-});
+});*/
 
 
 </script>
-<script>
-$( document ).ready(function() {
-  console.log("here");
-  $("#register-form").submit(function(evt){
-  evt.preventDefault();
-  var emailID = $("#Email").val()
-  var pssd = $("#Password").val()
-  var fName = $("#FirstName").val()
-  var lName = $("#LastName").val()
-  var ph = $("#phone").val()
-  var BaseUrl = "http://467a1d51.ngrok.io"
-  var Endpoint = "/api/register"
-  console.log("phone" + ph);
-  var FinalURL = BaseUrl+Endpoint;
-  $.get(FinalURL, { email: emailID, password:pssd,firstname: fName, lastname: lName, phone: ph }).done(function(data){
-    if(data['status'] == 200){
-      alert("registeration successfull");
-    }
-    else{
-      console.log(data);
-    }
-  });
-});
-
-});
-
-
-</script>
-//<div id="fb-root"></div>
-//<script>
-  // (function(d, s, id) {
-  //   var js, fjs = d.getElementsByTagName(s)[0];
-  //   if (d.getElementById(id)) {
-  //     return;
- //    }
- //    js = d.createElement(s); js.id = id;
- //    js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=APP_ID";
- //    fjs.parentNode.insertBefore(js, fjs);
-//   } (document, 'script', 'facebook-jssdk'));
-//</script>
-//<script>
-//function onSignIn(googleUser) {
-  //var profile = googleUser.getBasicProfile();
-  //console.log('ID: ' + profile.getId()); 
-  //console.log('Name: ' + profile.getName());
- // console.log('Image URL: ' + profile.getImageUrl());
-  //console.log('Email: ' + profile.getEmail()); 
-//}
-//</script>
 </body>
 </html>
-
