--- a/Datonate/templates/upload.html
+++ b/Datonate/templates/upload.html
@@ -34,13 +34,13 @@
                     <a href="/upload">Upload Datasets</a>
                 </li>
                 <li>
-                    <a href="viewdataset.html">View Datasets</a>
+                    <a href="/viewdataset">View Datasets</a>
                 </li>
                 <li>
                     <a href="/create">Create Experiments</a>
                 </li>
                 <li>
-                    <a href="viewexp.html">View Experiments</a>
+                    <a href="/viewexp">View Experiments</a>
                 </li>
                 <li>
                     <a href="settings.html">Settings</a>
