--- a/Datonate/templates/index.html
+++ b/Datonate/templates/index.html
@@ -114,43 +114,65 @@
                </div>
              </div>
              <div class="form-group row">
-               <label for="phone" class="col-sm-2 form-control-label">Phone Number</label>
-               <div class="col-sm-10">
+              <label for="gender" class="col-sm-2 form-control-label">Gender</label>
+              <div class="col-sm-10">
+                <select class="form-control" id="dataset-type" name="gender">
+                  <option value="">No preference</option>    
+                  <option value="0">Male</option>
+                  <option value="1">Female</option>
+                </select>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="skill" class="col-sm-2 form-control-label">Skill</label>
+              <div class="col-sm-10">
+                <select class="form-control" id="dataset-type" name="skill">
+                  <option value="0">No preference</option>
+                  <option value="1">High school diploma</option>
+                  <option value="2">Bachelors</option>
+                  <option value="3">Masters</option>
+                  <option value="4">PHD</option>
+                </select>
+              </div>
+            </div>
+            <div class="form-group row">
+             <label for="phone" class="col-sm-2 form-control-label">Phone Number</label>
+             <div class="col-sm-10">
 
-                 <input type="number" min=1000000000 max=9999999999 class="form-control" id="phone" name="phone" placeholder="7651237890">
-               </div>
-               <label class="col-sm-2 form-control-label" id="CheckPUID"></label>
+               <input type="number" min=1000000000 max=9999999999 class="form-control" id="phone" name="phone" placeholder="7651237890">
              </div>
-             <div class="form-group row">
-              <label for="Email" class="col-sm-2 form-control-label">Purdue Email</label>
-              <div class="col-sm-10">
-                <input type="email" class="form-control" id="Email" name="email" placeholder="Email">
-              </div>
-              <label class="col-sm-2 form-control-label" id="CheckEmail"></label>
+             <label class="col-sm-2 form-control-label" id="CheckPUID"></label>
+           </div>
+           <div class="form-group row">
+            <label for="Email" class="col-sm-2 form-control-label">Purdue Email</label>
+            <div class="col-sm-10">
+              <input type="email" class="form-control" id="Email" name="email" placeholder="Email">
             </div>
-            <div class="form-group row">
-              <label for="Password" class="col-sm-2 form-control-label">Password</label>
-              <div class="col-sm-10">
-                <input type="password" class="form-control" id="Password" name="password" placeholder="Password">
-              </div>
+            <label class="col-sm-2 form-control-label" id="CheckEmail"></label>
+          </div>
+          <div class="form-group row">
+            <label for="Password" class="col-sm-2 form-control-label">Password</label>
+            <div class="col-sm-10">
+              <input type="password" class="form-control" id="Password" name="password" placeholder="Password">
             </div>
-            <div class="form-group row">
-              <label for="Passwordconfirm" class="col-sm-2 form-control-label">Confirm Password</label>
-              <div class="col-sm-10">
-                <input type="password" class="form-control" id="Passwordconfirm" name="passwordconfirm" placeholder="Confirm Password">
-              </div>
+          </div>
+          <div class="form-group row">
+            <label for="Passwordconfirm" class="col-sm-2 form-control-label">Confirm Password</label>
+            <div class="col-sm-10">
+              <input type="password" class="form-control" id="Passwordconfirm" name="passwordconfirm" placeholder="Confirm Password">
             </div>
-            <button type="submit" class="btn btn-primary" style="padding: 10px 30px;">Submit</button>
-          </form>
-        </div>  
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default login-div" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-default reset-div back">Back</button>
-        <button type="button" class="btn btn-default registration-div back">Back</button>
-      </div>
-    </div> 
-  </div>
+          </div>
+          <button type="submit" class="btn btn-primary" style="padding: 10px 30px;">Submit</button>
+        </form>
+      </div>  
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-default login-div" data-dismiss="modal">Close</button>
+      <button type="button" class="btn btn-default reset-div back">Back</button>
+      <button type="button" class="btn btn-default registration-div back">Back</button>
+    </div>
+  </div> 
+</div>
 </div>
 <!-- Modal -->
 </section>
@@ -166,9 +188,51 @@
   </div>
 </section>
 <!-- intro section --> 
-
+<!-- services section -->
+<section id="services" class="services service-section">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4 col-sm-6 services text-center"> <span class="icon icon-strategy"></span>
+        <div class="services-content">
+          <h5>Strategy & Consulting</h5>
+          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec nulla non metus.</p>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6 services text-center"> <span class="icon icon-briefcase"></span>
+        <div class="services-content">
+          <h5>corporate identity</h5>
+          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec nulla non metus.</p>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6 services text-center"> <span class="icon icon-tools"></span>
+        <div class="services-content">
+          <h5>web design and development</h5>
+          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec nulla non metus.</p>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6 services text-center"> <span class="icon icon-genius"></span>
+        <div class="services-content">
+          <h5>Branding</h5>
+          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec nulla non metus.</p>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6 services text-center"> <span class="icon icon-megaphone"></span>
+        <div class="services-content">
+          <h5>Digital marketing</h5>
+          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec nulla non metus.</p>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6 services text-center"> <span class="icon icon-trophy"></span>
+        <div class="services-content">
+          <h5>Promotion material</h5>
+          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec nulla non metus.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- services section --> 
 <!-- work section -->
-
 <!-- work section --> 
 <!-- our team section -->
 <!-- our team section --> 
