--- a/Datonate/templates/create.html
+++ b/Datonate/templates/create.html
@@ -10,6 +10,7 @@
 
     <title>Create Experiments</title>
 
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <!-- Bootstrap core CSS -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 
@@ -26,28 +27,28 @@
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="dashboard.html">
-                        Welcome Admin!
+                    <a href="/">
+                        <span class="glyphicon glyphicon-user" aria-hidden="true"></span> Welcome Admin!
                     </a>
                 </li>
                 <li>
-                    <a href="/upload">Upload Datasets</a>
+                    <a href="/upload"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> Upload Datasets</a>
                 </li>
                 <li>
-                    <a href="/viewdataset">View Datasets</a>
+                    <a href="/viewdataset"><span class="glyphicon glyphicon-th-large" aria-hidden="true"></span> View Datasets</a>
                 </li>
                 <li>
-                    <a href="/create">Create Experiments</a>
+                    <a href="/create"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Create Experiments</a>
                 </li>
                 <li>
-                    <a href="/viewexp">View Experiments</a>
+                    <a href="/viewexp"><span class="glyphicon glyphicon-th-large" aria-hidden="true"></span> View Experiments</a>
                 </li>
                 <li>
-                    <a href="settings.html">Settings</a>
+                    <a href="#"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Settings</a>
                 </li>
                 <li>
-                    <a href="/logout">logout</a>
-                </li>
+                    <a href="/logout"><span class="glyphicon glyphicon-off" aria-hidden="true"></span> logout</a>
+            </li>
             </ul>
         </div>
         <!-- /#sidebar-wrapper -->
@@ -55,8 +56,23 @@
         <!-- Page Content -->
         <div id="page-content-wrapper">
             <div class="container-fluid">
-                <h1>Create Experiments</h1>
+                <h2>Create Experiments</h2>
+                <br>
+                {% if succ %}
+                     {{succ}}
+                     <p style="color: green;">Succefull!</p>
+                     {% endif %}
+                     {% if fail  %}
+                     <p style="color: red;">Unsuccessfull!</p>
+                     {% for i in  fail %}
+                     {{ i['errors'] }}
+                     {% endfor %}
+                     {% endif %}
                 <form action = "create">
+                    <div class="form-group">
+                        <label for="title-exp">Enter Title of Experiment</label>
+                        <textarea class="form-control" id="exp-title" name="exp_title" rows="1"></textarea>
+                    </div>
                     <div class="form-group">
                         <label for="dataset-id">Enter Dataset id</label>
                         <textarea class="form-control" id="dataset-id" name="dataset_id" rows="1"></textarea>
@@ -90,14 +106,16 @@
                         <textarea class="form-control" id="exp-description" rows="3" name="description"></textarea>
                     </div>
                     <div class="form-group">
-                        <label for="example-date-input" class="col-2 col-form-label">Set Deadline</label>
-                        <div class="col-10">
-                            <input class="form-control" type="date" value="2017-11-19" id="deadline">
-                        </div>
+                        <label for="max-time">Max Time (in Hours)</label>
+                        <textarea class="form-control" id="max-time" name="maxTime"rows="1"></textarea>
                     </div>
                     <div class="form-group">
-                        <label for="batch-size">Set Experiment Reminder(Hours before deadline)</label>
-                        <textarea class="form-control" id="reminder" name="expreminder" rows="1"></textarea>
+                        <label for="expected-time">Expected Time (in Hours)</label>
+                        <textarea class="form-control" id="expected-time" name="allocateTime"rows="1"></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label for="notification-time">Notification Time (in Hours)</label>
+                        <textarea class="form-control" id="notification-time" name="notifTime"rows="1"></textarea>
                     </div>
                     <div class="form-group">
                         <label for="dataset-type">Geographical Location</label>
@@ -373,17 +391,6 @@
                         </select>
                     </div>
                     <input type="submit" class="btn btn-primary btn-lg" value="Create Experiment">
-                     {% if succ is not none %}
-                     {{succ}}
-                     <p>Succefull!</p>
-                     {% endif %}
-                     {% if fail is not none %}
-                     <p>Unsuccessfull!</p>
-                     {% for i in  fail %}
-                     {{ i['errors'] }}
-                     {% endfor %}
-                     {% endif %}
-
                 </form>
             </div>
         </div>
