--- a/Datonate/templates/dashboard.html
+++ b/Datonate/templates/dashboard.html
@@ -9,11 +9,13 @@
     <meta name="author" content="">
 
     <title>Welcome</title>
-    
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <!-- Custom styles for this template -->
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/dashboard.css" rel="stylesheet">
      <!-- Bootstrap core CSS -->
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+
 
 </head>
 
@@ -25,27 +27,27 @@
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="dashboard.html">
-                        Welcome Admin!
+                    <a href="/">
+                        <span class="glyphicon glyphicon-user" aria-hidden="true"></span> Welcome Admin!
                     </a>
                 </li>
                 <li>
-                    <a href="/upload">Upload Datasets</a>
+                    <a href="/upload"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> Upload Datasets</a>
                 </li>
                 <li>
-                    <a href="/viewdataset">View Datasets</a>
+                    <a href="/viewdataset"><span class="glyphicon glyphicon-th-large" aria-hidden="true"></span> View Datasets</a>
                 </li>
                 <li>
-                    <a href="/create">Create Experiments</a>
+                    <a href="/create"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Create Experiments</a>
                 </li>
                 <li>
-                    <a href="/viewexp">View Experiments</a>
+                    <a href="/viewexp"><span class="glyphicon glyphicon-th-large" aria-hidden="true"></span> View Experiments</a>
                 </li>
                 <li>
-                    <a href="settings.html">Settings</a>
+                    <a href="#"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Settings</a>
                 </li>
                 <li>
-                    <a href="/logout">logout</a>
+                    <a href="/logout"><span class="glyphicon glyphicon-off" aria-hidden="true"></span> logout</a>
             </li>
             </ul>
         </div>
@@ -54,7 +56,8 @@
         <!-- Page Content -->
         <div id="page-content-wrapper">
             <div class="container-fluid">
-                <h1>Welcome!</h1>
+                <h2>Welcome!</h2>
+                <br>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                 
             </div>
