--- a/Datonate/templates/upload.html
+++ b/Datonate/templates/upload.html
@@ -10,6 +10,7 @@
 
     <title>Upload Dataset</title>
 
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <!-- Bootstrap core CSS -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 
@@ -26,27 +27,27 @@
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="dashboard.html">
-                        Welcome Admin!
+                    <a href="/">
+                        <span class="glyphicon glyphicon-user" aria-hidden="true"></span> Welcome Admin!
                     </a>
                 </li>
                 <li>
-                    <a href="/upload">Upload Datasets</a>
+                    <a href="/upload"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> Upload Datasets</a>
                 </li>
                 <li>
-                    <a href="/viewdataset">View Datasets</a>
+                    <a href="/viewdataset"><span class="glyphicon glyphicon-th-large" aria-hidden="true"></span> View Datasets</a>
                 </li>
                 <li>
-                    <a href="/create">Create Experiments</a>
+                    <a href="/create"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Create Experiments</a>
                 </li>
                 <li>
-                    <a href="/viewexp">View Experiments</a>
+                    <a href="/viewexp"><span class="glyphicon glyphicon-th-large" aria-hidden="true"></span> View Experiments</a>
                 </li>
                 <li>
-                    <a href="settings.html">Settings</a>
+                    <a href="#"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Settings</a>
                 </li>
                 <li>
-                    <a href="/logout">logout</a>
+                    <a href="/logout"><span class="glyphicon glyphicon-off" aria-hidden="true"></span> logout</a>
             </li>
             </ul>
         </div>
@@ -55,8 +56,13 @@
         <!-- Page Content -->
         <div id="page-content-wrapper">
             <div class="container-fluid">
-                <h1>Upload Datasets</h1>
+                <h2>Upload Datasets</h2>
+                <br>
                 <form action="http://datonate.com:5000/api/{{ value }}/upload/0" method="POST" id="upload-form" enctype="multipart/form-data"+>
+                    <div class="form-group">
+                        <label for="title-dataset">Enter Title of Dataset</label>
+                        <textarea class="form-control" id="dataset-title" name="dataset_title" rows="1"></textarea>
+                    </div>
                     <div class="form-group">
                         <label for="dataset-type">Choose type of Dataset</label>
                         <select class="form-control" id="dataset-type">
