--- a/Datonate/templates/viewdataset.html
+++ b/Datonate/templates/viewdataset.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
 
     <title>View Datasets</title>
-
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <!-- Bootstrap core CSS -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 
@@ -26,27 +26,27 @@
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="dashboard.html">
-                        Welcome Admin!
+                    <a href="/">
+                        <span class="glyphicon glyphicon-user" aria-hidden="true"></span> Welcome Admin!
                     </a>
                 </li>
                 <li>
-                    <a href="/upload">Upload Datasets</a>
+                    <a href="/upload"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> Upload Datasets</a>
                 </li>
                 <li>
-                    <a href="/viewdataset">View Datasets</a>
+                    <a href="/viewdataset"><span class="glyphicon glyphicon-th-large" aria-hidden="true"></span> View Datasets</a>
                 </li>
                 <li>
-                    <a href="/create">Create Experiments</a>
+                    <a href="/create"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Create Experiments</a>
                 </li>
                 <li>
-                    <a href="/viewexp">View Experiments</a>
+                    <a href="/viewexp"><span class="glyphicon glyphicon-th-large" aria-hidden="true"></span> View Experiments</a>
                 </li>
                 <li>
-                    <a href="settings.html">Settings</a>
+                    <a href="#"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Settings</a>
                 </li>
                 <li>
-                    <a href="/logout">logout</a>
+                    <a href="/logout"><span class="glyphicon glyphicon-off" aria-hidden="true"></span> logout</a>
             </li>
             </ul>
         </div>
@@ -55,7 +55,8 @@
         <!-- Page Content -->
         <div id="page-content-wrapper">
             <div class="container-fluid">
-                <h1>Datasets</h1>
+                <h2>Datasets</h2>
+                <br>
                 <table class="table table-striped">
                     <thead>
                       <tr>
