--- a/Datonate/templates/viewexp.html
+++ b/Datonate/templates/viewexp.html
@@ -10,6 +10,7 @@
 
     <title>View Experiments</title>
 
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <!-- Bootstrap core CSS -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 
@@ -26,28 +27,28 @@
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="dashboard.html">
-                        Welcome Admin!
+                    <a href="/">
+                        <span class="glyphicon glyphicon-user" aria-hidden="true"></span> Welcome Admin!
                     </a>
                 </li>
                 <li>
-                    <a href="/upload">Upload Datasets</a>
+                    <a href="/upload"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> Upload Datasets</a>
                 </li>
                 <li>
-                    <a href="/viewdataset">View Datasets</a>
+                    <a href="/viewdataset"><span class="glyphicon glyphicon-th-large" aria-hidden="true"></span> View Datasets</a>
                 </li>
                 <li>
-                    <a href="/create">Create Experiments</a>
+                    <a href="/create"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Create Experiments</a>
                 </li>
                 <li>
-                    <a href="/viewexp">View Experiments</a>
+                    <a href="/viewexp"><span class="glyphicon glyphicon-th-large" aria-hidden="true"></span> View Experiments</a>
                 </li>
                 <li>
-                    <a href="settings.html">Settings</a>
+                    <a href="#"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Settings</a>
                 </li>
                 <li>
-                    <a href="/logout">logout</a>
-            </li>
+                    <a href="/logout"><span class="glyphicon glyphicon-off" aria-hidden="true"></span> logout</a>
+                </li>
             </ul>
         </div>
         <!-- /#sidebar-wrapper -->
@@ -55,15 +56,16 @@
         <!-- Page Content -->
         <div id="page-content-wrapper">
             <div class="container-fluid">
-                <h1>Experiments</h1>
+                <h2>Experiments</h2>
+                <br>
                 <table class="table table-striped">
                     <thead>
                       <tr>
                         <th>#</th>
                         <th>Description</th>
-                        <th>Id</th>
-                        <th>Price</th>
-                        <th>Pause/Resume</th>
+                        <th>Price per batch</th>
+                        <th>Progress</th>
+                        <th width="10%">Pause/Resume</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -71,19 +73,27 @@
                   <tr>
                     <td>{{ loop.index }}</td>
                     <td>{{ i['description'] }}</td>
-                    <td>{{ i['id'] }}</td>
                     <td>{{ i['price'] }}</td>
-                    <td><button type="button" class="btn btn-default">Pause</button></td>
-                </tr>
-                    {% endfor %}
-            </tbody>
-        </table>
-            </div>
-        </div>
-        <!-- /#page-content-wrapper -->
+                    <td>
+                        <div class="progress" >
+                          <div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar"
+                          aria-valuenow="{{i['completed'] / i['total'] * 100}}" aria-valuemin="0" aria-valuemax="100" 
+                          style="width:{{i['completed'] / i['total'] * 100}}%;">
+                          <p style="color: black;">{{i['completed']}}/{{i['total']}}</p>
+                      </div>
+                  </div>
+              </td>
+              <td><button type="button" class="btn btn-default">Pause</button></td>
+          </tr>
+          {% endfor %}
+      </tbody>
+  </table>
+</div>
+</div>
+<!-- /#page-content-wrapper -->
 
-    </div>
-    <!-- /#wrapper -->
+</div>
+<!-- /#wrapper -->
 
 </body>
 
