--- a/Datonate/templates/create.html
+++ b/Datonate/templates/create.html
@@ -76,9 +76,9 @@
                     </div>
                     <div class="form-group">
                         <label for="dataset-select">Select Dataset</label>
-                        <select class="form-control" id="dataset-select" name="dataset-select">
+                        <select class="form-control" id="dataset-select" name="dataset_id">
                             {% for i in  data['datasets'] %}
-                            <option value="{{i['id']}}">{{i['resource_name']}}</option>   
+                            <option value="{{i['id']}}">{{i['resource_name']}}</option>
                             {% endfor %}
                         </select>
                     </div>
@@ -380,7 +380,7 @@
                     <div class="form-group">
                         <label for="dataset-type">Gender of participant</label>
                         <select class="form-control" id="dataset-type" name="gender">
-                            <option value="">No preference</option>    
+                            <option value="">No preference</option>
                             <option value="0">Male</option>
                             <option value="1">Female</option>
                         </select>
