--- a/Datonate/templates/viewdataset.html
+++ b/Datonate/templates/viewdataset.html
@@ -57,7 +57,7 @@
             <div class="container-fluid">
                 <h2>Datasets</h2>
                 <br>
-                <table class="table table-striped">
+                <table class="table table-striped" style="table-layout: fixed;">
                     <thead>
                       <tr>
                         <th>#</th>
