--- a/Datonate/templates/updateExp.html
+++ b/Datonate/templates/updateExp.html
@@ -8,8 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>View Experiments</title>
-
+    <title>View Experiment</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <!-- Bootstrap core CSS -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
@@ -56,48 +55,41 @@
         <!-- Page Content -->
         <div id="page-content-wrapper">
             <div class="container-fluid">
-                <h2>Experiments</h2>
+                <h2>Update Experiment</h2>
                 <br>
-                <table class="table table-striped">
-                    <thead>
-                      <tr>
-                        <th>#</th>
-                        <th>Description</th>
-                        <th>Price per batch</th>
-                        <th>Progress</th>
-                        <th width="10%">Pause/Resume</th>
-                        <th>Rate Batch</th>
-                        <th>Update Experiment</th>
-                    </tr>
-                </thead>
-                <tbody>
-                  {% for i in  value['experiments']%}
-                  <tr>
-                    <td>{{ loop.index }}</td>
-                    <td>{{ i['description'] }}</td>
-                    <td>{{ i['price'] }}</td>
-                    <td>
-                        <div class="progress" >
-                          <div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar"
-                          aria-valuenow="{{i['completed'] / i['total'] * 100}}" aria-valuemin="0" aria-valuemax="100" 
-                          style="width:{{i['completed'] / i['total'] * 100}}%;">
-                          <p style="color: black;">{{i['completed']}}/{{i['total']}}</p>
-                      </div>
-                  </div>
-              </td>
-              <td><button type="button" class="btn btn-default">Pause</button></td>
-              <td><a href="/rateBatch/{{ i['experiment_id'] }}"><button type="button" class="btn btn-default">Rate</button></a></td>
-              <td><a href="/updateExp/{{ i['experiment_id'] }}"><button type="button" class="btn btn-default">Update</button></a></td>
-          </tr>
-          {% endfor %}
-      </tbody>
-  </table>
-</div>
-</div>
-<!-- /#page-content-wrapper -->
+                {% if flag == 0%}
+                {% elif flag == 1%}
+                <p style="color: green;">Succefull!</p>
+                {% elif flag == 2 %}
+                <p style="color: red;">
+                    {{ data['response'] }}
+                </p>
+                {% endif %}
+                <form action = "{{ id }}" method="POST">
+                    <div class="form-group">
+                        <label for="expected-time">Expected Time (in Hours)</label>
+                        <textarea class="form-control" id="expected-time" name="allocateTime"rows="1">{% if data['allocateTime'] is none %}{% else %}{{ data['allocateTime'] }}{% endif %}</textarea>
+                    </div>
+                    <div class="form-group">
+                        <label for="max-time">Max Time (in Hours)</label>
+                        <textarea class="form-control" id="max-time" name="maxTime"rows="1">{% if data['maxTime'] is none %}{% else %}{{ data['maxTime'] }}{% endif %}</textarea>
+                    </div>
+                    <div class="form-group">
+                        <label for="notification-time">Notification Time (in Hours)</label>
+                        <textarea class="form-control" id="notification-time" name="notifTime"rows="1">{% if data['notifTime'] is none %}{% else %}{{ data['notifTime'] }}{% endif %}</textarea>
+                    </div>
+                    <div class="form-group">
+                        <label for="exp-description">Experiment Instructions</label>
+                        <textarea class="form-control" id="exp-description" rows="3" name="description">{% if data['description'] is none %}{% else %}{{ data['description'] }}{% endif %}</textarea>
+                    </div>
+                    <input type="submit" class="btn btn-default"></input>
+                </form>
+            </div>
+        </div>
+        <!-- /#page-content-wrapper -->
 
-</div>
-<!-- /#wrapper -->
+    </div>
+    <!-- /#wrapper -->
 
 </body>
 
