--- a/Datonate/templates/create.html
+++ b/Datonate/templates/create.html
@@ -37,6 +37,9 @@
                 <li>
                     <a href="/viewdataset"><span class="glyphicon glyphicon-th-large" aria-hidden="true"></span> View Datasets</a>
                 </li>
+                 <li>
+                    <a href="/publicdatasets"><span class="glyphicon glyphicon-th" aria-hidden="true"></span> Public Datasets</a>
+                </li>
                 <li>
                     <a href="/create"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Create Experiments</a>
                 </li>
