--- a/Datonate/templates/updateExp.html
+++ b/Datonate/templates/updateExp.html
@@ -46,6 +46,9 @@
                     <a href="/viewexp"><span class="glyphicon glyphicon-th-large" aria-hidden="true"></span> View Experiments</a>
                 </li>
                 <li>
+                    <a href="/paycheck"><span class="glyphicon glyphicon-euro" aria-hidden="true"></span> Manage Money</a>
+                </li>
+                <li>
                     <a href="#"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Settings</a>
                 </li>
                 <li>
