--- a/Datonate/templates/payment.html
+++ b/Datonate/templates/payment.html
@@ -8,14 +8,13 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Welcome</title>
-
+    <title>View Datasets</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <!-- Custom styles for this template -->
+    <!-- Bootstrap core CSS -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/static/css/dashboard.css" rel="stylesheet">
-     <!-- Bootstrap core CSS -->
 
+    <!-- Custom styles for this template -->
+    <link href="/static/css/dashboard.css" rel="stylesheet">
 
 </head>
 
@@ -54,23 +53,43 @@
                 </li>
                 <li>
                     <a href="/logout"><span class="glyphicon glyphicon-off" aria-hidden="true"></span> logout</a>
-            </li>
+                </li>
             </ul>
         </div>
         <!-- /#sidebar-wrapper -->
 
         <!-- Page Content -->
+        {% if flag == 1%}
+        <p style="color: green;">Money Transfer Successful!</p>
+        {% endif%}
+        {% if flag == 2%}
+        <p style="color: red;">Money Transfer Not succesfull!</p>
+        {% endif%}
         <div id="page-content-wrapper">
             <div class="container-fluid">
-                <h2>Welcome!</h2>
+                <h2>Payment</h2>
                 <br>
-                <p>Datanote is a tool for mobile users that will give them the ability to perform data annotation tasks in exchange for small amounts of money. The data would be provided by researchers for their personal research purposes</p>            
+                <h4> Transfer Money from Bank Account</h4>
+                <br>
+                <form action="{{ url_for('pay') }}" method="POST">
+          <script
+          src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+          data-key="{{ pub_key }}"
+          data-amount="99"
+          data-name="Demo Site"
+          data-description="Widget"
+          data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
+          data-locale="auto">
+         </script>
+        </form>
+        <br>
             </div>
         </div>
-        <!-- /#page-content-wrapper -->
+        
 
-    </div>
-    <!-- /#wrapper -->
+
+<!-- /#page-content-wrapper -->
+<!-- /#wrapper -->
 
 </body>
 
