--- a/Datonate/templates/rateBatch.html
+++ b/Datonate/templates/rateBatch.html
@@ -46,6 +46,9 @@
                     <a href="/viewexp"><span class="glyphicon glyphicon-th-large" aria-hidden="true"></span> View Experiments</a>
                 </li>
                 <li>
+                    <a href="/paycheck"><span class="glyphicon glyphicon-euro" aria-hidden="true"></span> Manage Money</a>
+                </li>
+                <li>
                     <a href="#"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Settings</a>
                 </li>
                 <li>
@@ -75,7 +78,7 @@
                   <tr>
                     <td>{{ loop.index }}</td>
                     <td>{{ i['id'] }}</td>
-                    <td>{{ i['link'] }}</td>
+                    <td><a href="{{ i['link'] }}">Download</a></td>
                     <td>
                     <form action = "{{ id }}" method="POST">
                         <div class="form-group rating">
