--- a/Datonate/templates/viewdataset.html
+++ b/Datonate/templates/viewdataset.html
@@ -46,6 +46,9 @@
                     <a href="/viewexp"><span class="glyphicon glyphicon-th-large" aria-hidden="true"></span> View Experiments</a>
                 </li>
                 <li>
+                    <a href="/paycheck"><span class="glyphicon glyphicon-euro" aria-hidden="true"></span> Manage Money</a>
+                </li>
+                <li>
                     <a href="#"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Settings</a>
                 </li>
                 <li>
@@ -63,8 +66,7 @@
                 <table class="table table-striped" style="table-layout: fixed;">
                     <thead>
                       <tr>
-                        <th width="4%">#</th>
-                        <th width="50%">Resource Name</th>
+                        <th>#</th>
                         <th>Title</th>
                         <th>Public/Private</th>
                         <th>Toggle</th>
@@ -74,7 +76,6 @@
                   {% for i in  value['datasets']%}
                   <tr>
                     <td>{{ loop.index }}</td>
-                    <td>{{ i['resource_name'] }}</td>
                     <td>{{ i['title'] }}</td>
                     <td>{{ i['status'] }}</td>
                     <td><a href="/viewdataset/{{ i['id'] }}"><button type="button" class="btn btn-default">Toggle</button></a></td>
